--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
     "font-awesome": "^4.7.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/swapspingle/assignment.git"
+  },
+  "bugs": {
+    "url": "https://github.com/swapspingle/assignment/issues"
+  },
+  "homepage": "https://github.com/swapspingle/assignment#readme"
 }
